# transform-skill

./: .gitignore  INSTALL.md  README.md  pyproject.toml  readme_CN.md  readme_EN.md  readme_JP.md
scripts/: sync_skill_runtime.sh
skills/distill-from-corpus-path/: SKILL.md
skills/distill-from-corpus-path/runtime/src/persona_distill/: cli.py  extract.py  ingest.py  repository.py  synthesize.py  validation.py
skills/distill-from-corpus-path/scripts/: run_agent_orchestrated.sh  run_distill_from_path.sh  run_friend_command.sh
skills/transform-skill/: SKILL.md
skills/transform-skill/prompts/: coldstart-playbook.md  entry-intake.md  ops-playbook.md  update-playbook.md
skills/transform-skill/runtime/: requirements.txt
skills/transform-skill/tools/: run_transform.sh  transform_router.py
src/persona_distill/: __init__.py  cli.py  evaluation.py  extract.py  holdout.py  ingest.py  models.py  orchestrator.py  repository.py  semantic_commands.py  synthesize.py  utils.py  workflow.py
src/persona_distill/providers/: __init__.py  factory.py  heuristic.py
tests/: test_cli_workspace_root.py  test_context_reply_memory_filter.py  test_evaluation_default_benchmark.py  test_holdout_context_grouping.py  test_holdout_intent_metric.py  test_holdout_persona_alignment.py  test_ingest_text_transcript.py  test_orchestrator_plan.py  test_persona_context_prompting.py  test_runtime_provider.py  test_semantic_commands.py  test_speaking_style_similarity.py  test_synthesize_style_contract.py  test_target_speaker_resolution.py  test_transform_entry.py
(+12 files in other folders)
